<resources>
    <string name="app_name">kindergarten-workshop</string>
    <string name="this_is_my_kindergarten">Well, hello, this is my kindergarten</string>
    <string name="what_my_paws_can">WHAT MY PAWS CAN POSSIBLY DO (RESUME)</string>
    <string name="oho_ho">Oho-ho</string>
    <string name="my_name_is">My name is</string>
    <string name="malika">Malika</string>
    <string name="idc_its_cringe">I don\'t care if it\'s cringe I\'ll keep doing all my thing :p</string>
    <string name="my_thoughts">This place has no rules. It’s just my sloppy draft. You might think this app is in poor taste… 😭</string>
    <string name="your_thoughts">Now I will give a fair assessment of your design 😤</string>
    <string name="you">You</string>
    <string name="your_opinion">Your opinion</string>
</resources>