<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background_main"
    android:paddingHorizontal="22dp"
    android:paddingVertical="19dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/panelTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/element_text"
        android:paddingVertical="11dp"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/this_is_my_kindergarten"
            android:textAlignment="center" />
    </LinearLayout>

    <ImageView
        android:id="@+id/panelImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/image_example"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintDimensionRatio="H,2:3"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/panelTop" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/resume"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/purple_text_main"
        android:text="@string/what_my_paws_can"
        android:fontFamily="@font/inika_bold"
        android:background="@drawable/element_button"
        android:layout_marginTop="5dp"
        android:paddingHorizontal="14dp"
        android:paddingVertical="19dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toBottomOf="@+id/panelImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"/>

    <LinearLayout
        android:id="@+id/panelDesk"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/element_text_secondary"
        tools:ignore="NestedWeights"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/guidelineVertical"
        app:layout_constraintTop_toBottomOf="@+id/panelTop"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/oho_ho"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_normal"
            android:fontFamily="@font/irish_grover" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_name_is"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_small"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/malika"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_normal"
            android:fontFamily="@font/irish_grover" />
    </LinearLayout>

    <TextView
        android:id="@+id/idcText"
        android:layout_width="60dp"
        android:layout_height="321dp"
        android:background="@drawable/element_text"
        android:gravity="center"
        android:maxLines="2"
        android:rotation="90
"
        android:text="@string/idc_its_cringe"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/resume"
        app:layout_constraintEnd_toStartOf="@+id/panelIcons"
        app:layout_constraintStart_toStartOf="@+id/guidelineVertical"
        app:layout_constraintTop_toBottomOf="@+id/panelDesk"
        app:layout_constraintVertical_bias="0.0" />

    <RelativeLayout
        android:id="@+id/panelIcons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/element_text"
        app:layout_constraintTop_toBottomOf="@+id/panelDesk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/idcText"
        app:layout_constraintBottom_toBottomOf="@+id/resume">

    </RelativeLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.61" />


</androidx.constraintlayout.widget.ConstraintLayout>