<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background_main"
    android:paddingHorizontal="22dp"
    android:paddingVertical="19dp"
    android:orientation="vertical">

<!--    <com.mikaela.kindergarten_workshop.utils.ShadowLinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@drawable/element_text"-->
<!--        android:paddingVertical="11dp"-->
<!--        android:padding="16dp"-->
<!--        app:shadowColor="#EC4B4B">-->
<!--        <TextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/this_is_my_kindergarten"-->
<!--            android:textAlignment="center" />-->
<!--    </com.mikaela.kindergarten_workshop.utils.ShadowLinearLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/element_text"
        android:paddingVertical="11dp"
        android:padding="16dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/this_is_my_kindergarten"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="344dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="186"
            android:orientation="vertical"
            android:layout_marginEnd="5dp">
            
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="260"
                android:src="@color/white_transparent"
                tools:ignore="NestedWeights"
                android:layout_marginBottom="5dp"/>
            
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/resume"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="74"
                android:textSize="14sp"
                android:textColor="@color/purple_text_main"
                android:text="@string/what_my_paws_can"
                android:fontFamily="@font/inika_bold"
                android:background="@drawable/element_button"
                android:layout_marginTop="5dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="118"
            android:orientation="vertical"
            android:layout_marginStart="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="84"
                android:orientation="vertical"
                android:background="@drawable/element_text_secondary"
                tools:ignore="NestedWeights"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/oho_ho"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_size_normal"
                    android:fontFamily="@font/irish_grover" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/my_name_is"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_size_small"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/malika"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_size_normal"
                    android:fontFamily="@font/irish_grover" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="252"
                android:orientation="horizontal">

                <com.mikaela.kindergarten_workshop.utils.RotatedTextView
                    android:id="@+id/idcText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/idc_its_cringe"
                    android:background="@drawable/element_text"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:maxLines="2"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</LinearLayout>